static/style.css
body {
    font:400 16px 'Calibri','Arial';
}
a, h1, h2 {
    color: #377ba8;
}
h1, h2 {
    font-family: 'Gilroy', sans-serif;
    margin: 0;
}
h1 {
    text-align: center;
}
table {
    width: 100%;
    border: 1px solid #5555 !important;
}
table tr:first-child {
    background:#377ba8;
    color: white;
    font-weight: bold;
    text-align: center;
}
table tr {
    background: #eeee;
    line-height: 30px;
}
table tr td {
    padding: 3px;
    /* URL breaks */
    overflow-wrap: break-word;
    word-wrap: break-word;
    -ms-word-break: break-all;
    word-break: break-word;
    -ms-hyphens: auto;
    -moz-hyphens: auto;
    -webkit-hyphens: auto;
    hyphens: auto;
}
table tr:nth-of-type(2n) {
    background:#ffff !important;
}
a {
    text-decoration: none;
}
#vendor_div {
    border: 1px solid #5555 !important;
    margin-top: 5px;
    margin-bottom: 5px;
}
@media only screen and (max-width: 575px) {
    table tr {
        line-height: 20px;
    }
}

